--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
 [dependencies]
 uuid = { version = "0.8.2", features = ["v4"]}
-tungstenite = "0.13.0"
+tokio = { version = "1", features = ["full" ], feature="sync" }
+tokio-tungstenite = "*"
+log = "0.4"
+env_logger = "0.8.4"
+futures-util = "0.3.15"
