--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "server"
-path = "src/bin/server.rs"
+name = "ws_io"
+path = "src/bin/ws_kernel_io.rs"
 
 [dependencies]
 uuid = { version = "0.8.2", features = ["v4"]}
