--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ env_logger = "0.8.4"
 futures-util = "0.3.15"
 mockall = "0.10.1"
 url = "2.2.2"
+serde = {version = "1.0.126", features = ["derive"]}
+serde_json = "1.0.64"
