--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ mockall = "0.10.1"
 url = "2.2.2"
 serde = {version = "1.0.126", features = ["derive"]}
 serde_json = "1.0.64"
+xxhash-rust = {version = "0.8.2", features = ["xxh3"]}
